# tufa

./: Cargo.toml  Changelog.md  README.md  TODO.md
examples/basic/: Cargo.toml  compute.wgsl  main.rs
examples/basic/src/: main.rs  shader.wgsl
examples/bezier/: main.rs  shader.wgsl
examples/buffer-resize/: Cargo.toml  compute.wgsl  main.rs
examples/dots/: Cargo.toml  compute.wgsl  main.rs  render.wgsl
examples/hello-triangle/: Cargo.toml  main.rs  shader.wgsl
examples/mandelbrot/: .gitignore  Cargo.toml  main.rs
examples/mandelbrot-interactive/: Cargo.toml  main.rs
examples/mandelbrot-interactive/src/: main.rs  render.wgsl
examples/mandelbrot/src/: compute.wgsl  main.rs  render.wgsl  shader.wgsl
examples/offline-triangle/: Cargo.toml  main.rs  shader.wgsl
examples/texture-mapping/: Cargo.toml  main.rs  shader.wgsl
src/: buffer.rs  gpu.rs  lib.rs  window.rs
src/bindings/: acceleration_structure.rs  manager.rs  mod.rs  sampler.rs  texture.rs
src/bindings/buffer/: blas.rs  index.rs  mod.rs  mutability.rs  storage.rs  uniform.rs  vertex.rs
src/bindings/collection/: mod.rs  texture_collection.rs
src/bindings/resources/: acceleration_structure.rs  index.rs  mod.rs  storage.rs
src/bindings/texture/: format.rs  mod.rs  sampler.rs
src/buffer/: index.rs  mod.rs  storage.rs  uniform.rs  vertex.rs
src/interactive/: egui.rs  mod.rs  window.rs
src/interactive/misc/: camera.rs  ui.rs
src/misc/: camera.rs  default_buffer.rs  ids.rs  mod.rs  mutability.rs  thread_ptr.rs
src/pipeline/: compute.rs  mod.rs  render.rs
src/pipeline/render/: consts.rs  mod.rs  pass.rs
