[package]
name = "compute"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.21.0"
crossbeam-channel = "0.5.14"
encase = { version = "0.10.0", features = ["nalgebra"] }
nalgebra = "0.33.2"
pollster = "0.4.0"
wgpu = "23.0.1"

# Interactive only
egui = { version = "0.30.0", optional = true }
egui-wgpu = { version = "0.30.0", optional = true }
egui-winit = { version = "0.30.0", optional = true }
winit = { version = "0.30.7", optional = true }
parking_lot = "0.12.3"

[features]
interactive = ["egui", "egui-wgpu", "egui-winit", "winit"]

[workspace]
members = [
    "examples/basic",
    "examples/buffer-resize",
    "examples/mandelbrot-interactive",
    "examples/mandelbrot",
]
