[package]
name = "tufa"
version = "0.1.1"
edition = "2021"

description = "A wgpu abstraction layer."
categories = ["graphics", "rendering"]
keywords = ["wgpu", "graphics"]
repository = "https://github.com/connorslade/tufa"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.21.0"
crossbeam-channel = "0.5.14"
encase = { version = "0.10.0", features = ["nalgebra"] }
nalgebra = "0.33.2"
parking_lot = "0.12.3"
pollster = "0.4.0"
wgpu = "24.0.0"

# Interactive only
egui = { version = "0.31.0", optional = true }
egui-wgpu = { version = "0.31.0", optional = true }
egui-winit = { version = "0.31.0", optional = true }
winit = { version = "0.30.7", optional = true }

[features]
interactive = ["egui", "egui-wgpu", "egui-winit", "winit"]

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
    "examples/basic",
    "examples/buffer-resize",
    "examples/dots",
    "examples/hello-triangle",
    "examples/mandelbrot",
    "examples/mandelbrot-interactive",
    "examples/texture-mapping",
]
